--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,69 @@
+# ===================================================================
+# Node.js / React
+# ===================================================================
+# Dependencies
+node_modules/
+
+# Build artifacts
+build/
+.next/
+dist/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment variables (DO NOT commit secrets!)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.envrc
+
+# Caches
+.npm/
+.vite-cache/
+.webassets-cache/
+
+
+# ===================================================================
+# Machine Learning (Data, Models, Caches)
+# ===================================================================
+# Large data files (consider using Git LFS)
+# *.csv
+# *.json
+# data/
+
+# Serialized models
+*.pkl
+*.joblib
+*.h5
+*.pb
+*.onnx
+models/
+
+# Caches
+.mypy_cache/
+.pytest_cache/
+.ruff_cache/
+
+
+# ===================================================================
+# Operating System
+# ===================================================================
+.DS_Store
+Thumbs.db
+._*
+*~
+
+
+# ===================================================================
+# Python (Comprehensive list as provided)
+# ===================================================================
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -111,7 +177,7 @@ ipython_config.py
 # pdm
 #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
 #   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
+#   httpsG://pdm-project.org/en/latest/usage/project/#working-with-version-control
 #pdm.lock
 #pdm.toml
 .pdm-python
@@ -182,9 +248,9 @@ cython_debug/
 .abstra/
 
 # Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
+#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore
 #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
+#  and can be added to the global gitignore or merged into this file. However, if you prefer,
 #  you could uncomment the following to ignore the entire vscode folder
 # .vscode/
 
